--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "sanuu whatsapp-bot",
+  "name": "SANUU MD",
   "version": "1.0.0",
-  "description": "WhatsApp Bot with Session ID, Phone Number, and GitHub Authentication",
+  "description": "A WhatsApp bot built using whatsapp-web.js",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "axios": "^1.3.5",
-    "dotenv": "^16.3.1",
+    "whatsapp-web.js": "^1.18.1",
+    "qrcode-terminal": "^0.12.0",
     "express": "^4.18.2",
-    "whatsapp-web.js": "^1.18.0"
-  }
+    "dotenv": "^16.0.3",
+    "axios": "^1.4.0"
+  },
+  "author": "sanidu",
+  "license": "MIT"
 }
