--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-GITHUB_TOKEN=your_github_personal_access_token
-SESSION_ID=your_whatsapp_session_id
-PHONE_NUMBER=your_phone_number
+SESSION_ID=sannuu-bot-session
+PORT=3000
