--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "SANUU MD",
+  "name": "sannuu-md-bot",
   "version": "1.0.0",
-  "description": "A WhatsApp bot built using whatsapp-web.js",
+  "description": "SANNUU MD - A WhatsApp bot built with whatsapp-web.js",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
+  "keywords": ["whatsapp", "bot", "SANNUU MD", "automation"],
+  "author": "Sanidu",
+  "license": "MIT",
   "dependencies": {
-    "whatsapp-web.js": "^1.18.1",
-    "qrcode-terminal": "^0.12.0",
+    "axios": "^1.6.0",
+    "dotenv": "^16.1.0",
     "express": "^4.18.2",
-    "dotenv": "^16.0.3",
-    "axios": "^1.4.0"
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.20.5"
   },
-  "author": "sanidu",
-  "license": "MIT"
+  "engines": {
+    "node": ">=16"
+  }
 }
